# PROJETCPP

./: ArbreB.cpp  ArbreB.h  Makefile  Makefile3  README.md  Sommet.cpp  Sommet.h  main.cpp  test.cpp
PARTIE_1/: .gitignore  Makefile  README.md  build_config.txt
PARTIE_1/Qt/: CMakeLists.txt
PARTIE_1/inc/: Sommet.h  test.h
PARTIE_1/src/: Sommet.cpp  main.cpp  test.cpp
PARTIE_2/: Makefile  README.md  texte.txt
PARTIE_2/Qt/src/: main.cpp
PARTIE_2/inc/: ArbreB.h  huffman.h
PARTIE_2/src/: ArbreB.cpp  Sommet.cpp  huffman.cpp  main.cpp
PARTIE_3/: Makefile  README.md  code.txt
PARTIE_3/inc/: ArbreB.h  Sommet.h  huffman.h
PARTIE_3/src/: ArbreB.cpp  huffman.cpp
